--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# ---------------------------------
+
+# Application ignored directories
+**/temp
+**/data
+**/logs
+
+/poc
